# guarded-alpha

./: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: pages.yml
apps/agent/src/guarded_alpha/: __init__.py  app.py  audit.py  bnb_identity.py  cmc.py  competition.py  config.py  cost_basis.py  daily.py  env.py  execution.py  fixtures.py  models.py  portfolio.py  preflight.py  register.py  risk.py  run_card.py  runner.py  scheduler.py  strategy.py
apps/agent/tests/: conftest.py  test_audit.py  test_cmc_api.py  test_config.py  test_daily.py  test_execution.py  test_portfolio.py  test_risk.py  test_scheduler_logs.py  test_scheduler_tick.py  test_strategy.py  test_strategy_pnl.py  test_vibe_score.py
apps/web/: .env.example  index.html  package.json
apps/web/src/: App.tsx  styles.css  types.ts
apps/web/src/lib/: api.ts
docs/: DEPLOYMENT.md  RUNBOOK.md  THREAT_MODEL.md
ops/systemd/: guarded-alpha-api.service.template  guarded-alpha-scheduler.service.template
scripts/: install-systemd-user.sh  start-local-agent.sh
skills/guarded-alpha/: SKILL.md
