[project]
name = "guarded-alpha-agent"
version = "0.1.0"
description = "Self-custodial AI trading agent with guarded TWAK execution"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.32.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.8.0",
]
bnb = [
  "bnbagent>=0.1.0",
]

[project.scripts]
guarded-alpha-api = "guarded_alpha.app:main"
guarded-alpha-run-once = "guarded_alpha.runner:main"
guarded-alpha-tick = "guarded_alpha.scheduler:tick_main"
guarded-alpha-scheduler = "guarded_alpha.scheduler:scheduler_main"
guarded-alpha-status = "guarded_alpha.register:status_main"
guarded-alpha-competition-tick = "guarded_alpha.scheduler:tick_main"
guarded-alpha-competition-scheduler = "guarded_alpha.scheduler:scheduler_main"
guarded-alpha-competition-status = "guarded_alpha.register:status_main"
guarded-alpha-register = "guarded_alpha.register:register_main"
guarded-alpha-preflight = "guarded_alpha.preflight:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apps/agent/src/guarded_alpha"]

[tool.pytest.ini_options]
testpaths = ["apps/agent/tests"]
pythonpath = ["apps/agent/src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
